# rustc-version-runtime-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  index.html  search-index.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js
implementors/std/error/: trait.Error.js
rustc_version_runtime/: fn.version.html  fn.version_matches.html  fn.version_meta.html  index.html  sidebar-items.js
rustc_version_runtime/version/: sidebar-items.js
src/: lib.rs
src/rustc_version_runtime/: lib.rs.html  version.rs.html
